# intent-contracts

./: Cargo.toml
contracts/cosmwasm-vm/cw-intents-v1/: Cargo.toml
contracts/cosmwasm-vm/cw-intents-v1/src/: contract.rs  errors.rs  events.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/cosmwasm-vm/cw-intents-v1/tests/: test_contract.rs
contracts/javascore/: .gitignore
contracts/javascore/Intent_Contracts/: json_payload.json  package-lock.json  package.json  swap_order_data.json
contracts/javascore/app/: build.gradle
contracts/solana/: Anchor.toml  Cargo.toml  package.json
contracts/solana/programs/intent/: Cargo.toml
contracts/solana/programs/intent/src/: connection.rs  constants.rs  error.rs  event.rs  helpers.rs  lib.rs  state.rs
contracts/solana/programs/intent/src/instructions/: cancel.rs  config.rs  fill.rs  mod.rs  query_accounts.rs  recv_message.rs  swap.rs
contracts/solana/programs/intent/src/types/: misc.rs  mod.rs  order_cancel.rs  order_fill.rs  order_message.rs  swap_order.rs
contracts/solana/scripts/: initialize.ts  recv-message.ts  set-admin.ts  set-fee-handler.ts  set-protocol-fee.ts  setup.ts
contracts/solana/tests/: begin.ts  cancel.ts  fill.ts  recv-message.ts  setup.ts  swap.ts
contracts/soroban/: Cargo.toml
contracts/sui/intent_v1/: Move.toml
scripts/: optimize-cosmwasm.sh  optimize-move.sh
sdk/: package-lock.json  package.json
sdk/src/: evm-intents.ts  icon-intents.ts  solana-intents.ts  sui-intents.ts  swap-order.ts  test-icon.ts  test-mainnet.ts  test.ts  token-fallback-data.ts  xcall-bridge.ts
(+49 files in other folders)
