[package]
name = "intent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = { version = "1.7", features = ["derive"] }
anchor-spl = "0.30.1"
borsh = { version = "1.5.1" }
hex ={ version = "0.4.3", default-features = false }
rlp = { git = "http://github.com/icon-project/xcall-multi", branch = "main" }


